# concurrent-agda

./: LICENSE  Unit.lagda  concurrent-agda.org
Control/: Concurrent.lagda
Control/Concurrent/: Chan.lagda
Control/Concurrent/Chan/: Synchronous.lagda
ffi/: concurrent-agda-ffi.cabal
ffi/Control/Concurrent/: FFI.hs
